Fix sonar issues in multiple files